Start implementation of Redis cache library

--- a/.env
+++ b/.env
@@ -10,3 +10,4 @@ DATABASE_SERVICE_SERVER=localhost
 USER_SERVICE_SERVER=localhost
 SESSION_SERVICE_SERVER=localhost
 MONGO_SERVICE_SERVER=localhost
+REDIS_SERVICE_SERVER=localhost
