--- a/minerva-data/Cargo.toml
+++ b/minerva-data/Cargo.toml
@@ -23,7 +23,8 @@ num-traits = "0.2"
 num-derive = "0.3"
 bb8 = "0.7.1"
 bb8-diesel = "0.2.1"
-sodiumoxide = ">= 0.2.7"
 chrono = {version = "0.4", features = ["serde"]}
 tokio = {version = "1", features = ["macros", "rt-multi-thread", "sync", "net"]}
 mongodb = "2.2.1"
+argon2 = "0.4"
+rand_core = {version = "0.6", features = ["std"]}
