--- a/deploy/frontend-deployment.yml
+++ b/deploy/frontend-deployment.yml
@@ -12,6 +12,7 @@ spec:
       containers:
         - name: frontend-container
           image: luksamuk/minerva_frontend:0.1.1
+          imagePullPolicy: Always
           ports:
             - containerPort: 80
           envFrom:
