--- a/deploy/postgresql-deployment.yml
+++ b/deploy/postgresql-deployment.yml
@@ -12,6 +12,7 @@ spec:
       containers:
         - name: postgresql-container
           image: postgres:14
+          imagePullPolicy: IfNotPresent
           volumeMounts:
             - mountPath: /var/lib/postgresql/data
               name: postgresql-pv
