--- a/swarm/docker-stack.yml
+++ b/swarm/docker-stack.yml
@@ -80,6 +80,7 @@ services:
     environment:
       - DATABASE_SERVICE_SERVER=postgresql
       - MONGO_SERVICE_SERVER=mongodb
+      - REDIS_SERVICE_SERVER=redis
     networks:
       - minerva_system
     deploy:
