--- a/swarm/docker-stack.yml
+++ b/swarm/docker-stack.yml
@@ -108,12 +108,14 @@ services:
 
   # pgAdmin 4
   pgadmin:
-    image: luksamuk/minerva_pgadmin:latest
+    image: dpage/pgadmin4:latest
     environment:
       - PGADMIN_DEFAULT_EMAIL=admin@admin.com
       - PGADMIN_DEFAULT_PASSWORD=admin
     ports:
       - "8484:80"
+    volumes:
+      - /vagrant/servers.json:/pgadmin4/servers.json
     networks:
       - minerva_system
     deploy:
