--- a/deploy/swarm/docker-stack.yml
+++ b/deploy/swarm/docker-stack.yml
@@ -193,6 +193,24 @@ services:
     deploy:
       placement:
         constraints: [node.role == manager]
+
+  # RabbitMQ
+  rabbitmq:
+    image: rabbitmq:3-management-alpine
+    environment:
+      - RABBITMQ_DEFAULT_USER=rabbitmq
+      - RABBITMQ_DEFAULT_PASS=minerva
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+    networks:
+      - minerva_system
+    deploy:
+      restart-policy:
+        condition: on-failure
+      placement:
+        constraints: [node.role == worker]
+        
         
 networks:
   minerva_system:
