Add environment variables and base RUNONCE files

--- a/.env
+++ b/.env
@@ -11,3 +11,4 @@ USER_SERVICE_SERVER=localhost
 SESSION_SERVICE_SERVER=localhost
 MONGO_SERVICE_SERVER=localhost
 REDIS_SERVICE_SERVER=localhost
+RABBITMQ_SERVICE_SERVER=localhost
