--- a/deploy/k8s/servers-configmap.yml
+++ b/deploy/k8s/servers-configmap.yml
@@ -9,3 +9,4 @@ data:
   MONGO_SERVICE_SERVER: mongodb-svc
   REST_SERVICE_SERVER: rest-svc
   REDIS_SERVICE_SERVER: redis-svc
+  RABBITMQ_SERVICE_SERVER: broker-rabbitmqcluster
