--- a/deploy/swarm/docker-stack.yml
+++ b/deploy/swarm/docker-stack.yml
@@ -46,6 +46,7 @@ services:
     environment:
       - DATABASE_SERVICE_SERVER=postgresql
       - MONGO_SERVICE_SERVER=mongodb
+      - RABBITMQ_SERVICE_SERVER=rabbitmq
     depends_on:
       - "postgresql"
       - "mongodb"
@@ -65,6 +66,7 @@ services:
     image: luksamuk/minerva_user:0.2.2
     environment:
       - DATABASE_SERVICE_SERVER=postgresql
+      - RABBITMQ_SERVICE_SERVER=rabbitmq
     networks:
       - minerva_system
     deploy:
@@ -83,6 +85,7 @@ services:
       - DATABASE_SERVICE_SERVER=postgresql
       - MONGO_SERVICE_SERVER=mongodb
       - REDIS_SERVICE_SERVER=redis
+      - RABBITMQ_SERVICE_SERVER=rabbitmq
     networks:
       - minerva_system
     deploy:
