--- a/minerva-broker/Cargo.toml
+++ b/minerva-broker/Cargo.toml
@@ -14,3 +14,4 @@ futures = "0.3"
 tokio = {version = "1", features = ["macros", "rt-multi-thread", "sync", "net"]}
 tokio-executor-trait = "2.0.1"
 tokio-reactor-trait = "1.1.0"
+reqwest = "0.11.11"
