Add RabbitMQ service to unit tests runner in Github Actions

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -32,6 +32,15 @@ jobs:
         ports:
           - 6379:6379
 
+      rabbitmq:
+        image: rabbitmq:3-management-alpine
+        environment:
+          - RABBITMQ_DEFAULT_USER=rabbitmq
+          - RABBITMQ_DEFAULT_PASS=minerva
+        ports:
+          - 5672:5672
+          - 15672:15672
+
     steps:
       - name: Install PostgreSQL dependencies
         run: |
