--- a/minerva-broker/Cargo.toml
+++ b/minerva-broker/Cargo.toml
@@ -10,6 +10,7 @@ path = "src/lib.rs"
 
 [dependencies]
 lapin = "2.1.1"
+bb8-lapin = "0.4.0"
 futures = "0.3"
 tokio = {version = "1", features = ["macros", "rt-multi-thread", "sync", "net"]}
 tokio-executor-trait = "2.0.1"
