--- a/minerva-user/Cargo.toml
+++ b/minerva-user/Cargo.toml
@@ -8,6 +8,7 @@ authors = ["Lucas S. Vieira <lucasvieira@protonmail.com>"]
 [dependencies]
 minerva-rpc = {path = "../minerva-rpc"}
 minerva-data = {path = "../minerva-data"}
+minerva-broker = {path = "../minerva-broker"}
 tokio = {version = "1", features = ["macros", "rt-multi-thread", "sync", "net"]}
 dotenv = "0.15.0"
 tonic = "0.7"
@@ -16,3 +17,4 @@ bb8 = "0.7.1"
 bb8-diesel = "0.2.1"
 futures-util = "0.3"
 chrono = {version = "0.4", features = ["serde"]}
+lapin = "2.1.1"
