Add consumer and message dispatching for logging off sessions

--- a/minerva-dispatch/Cargo.toml
+++ b/minerva-dispatch/Cargo.toml
@@ -9,6 +9,7 @@ authors = ["Lucas S. Vieira <lucasvieira@protonmail.com>"]
 minerva-data = {path = "../minerva-data"}
 minerva-cache = {path = "../minerva-cache"}
 minerva-broker = {path = "../minerva-broker"}
+minerva-rpc = {path = "../minerva-rpc"}
 tokio = {version = "1", features = ["macros", "rt-multi-thread", "sync", "time"]}
 dotenv = "0.15.0"
 mongodb = "2.2.1"
@@ -16,3 +17,5 @@ diesel = { version = "1.4.4", features = ["postgres"] }
 redis = {version = "0.21.5", features = ["tokio-comp", "aio"]}
 lapin = "2.1.1"
 futures = "0.3"
+base64 = "0.13.0"
+tonic = "0.7"
