--- a/minerva-broker/Cargo.toml
+++ b/minerva-broker/Cargo.toml
@@ -16,3 +16,5 @@ tokio = {version = "1", features = ["macros", "rt-multi-thread", "sync", "net"]}
 tokio-executor-trait = "2.0.1"
 tokio-reactor-trait = "1.1.0"
 reqwest = "0.11.11"
+serde = {version = "1.0", features = ["derive"]}
+serde_json = "1.0"
