--- a/deploy/k8s/runonce-configmap.yml
+++ b/deploy/k8s/runonce-configmap.yml
@@ -7,4 +7,5 @@ data:
   MONGO_SERVICE_SERVER: mongodb-svc
   DATABASE_PORT: "5432"
   MONGO_PORT: "27017"
+  RABBITMQ_SERVICE_SERVER: broker-rabbitmqcluster
 
