Update dependencies on Compose and Stack

--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -38,6 +38,7 @@ services:
     depends_on:
       - "postgresql"
       - "mongodb"
+      - "rabbitmq"
     networks:
       - minerva_system
     restart: on-failure:5
@@ -74,6 +75,8 @@ services:
       - RABBITMQ_SERVICE_SERVER=rabbitmq
       - SESSION_SERVICE_SERVER=session
       - SESSION_SERVICE_PORT=9011
+    depends_on:
+      - "rabbitmq"
     networks:
       - minerva_system
     restart: on-failure:5
