Force Redis Commander on amd64 architectures only

--- a/deploy/k8s/rediscommander-deployment.yml
+++ b/deploy/k8s/rediscommander-deployment.yml
@@ -18,6 +18,8 @@ spec:
           envFrom:
             - configMapRef:
                 name: rediscommander-configmap
+      nodeSelector:
+        kubernetes.io/arch: "amd64"
   replicas: 1
   selector:
     matchLabels:
