Refactor k8s deployment files so that they are safer and appear more organized

--- a/deploy/k8s/broker-rabbitmqcluster.yml
+++ b/deploy/k8s/broker-rabbitmqcluster.yml
@@ -2,6 +2,7 @@ apiVersion: rabbitmq.com/v1beta1
 kind: RabbitmqCluster
 metadata:
   name: broker-rabbitmqcluster
+  namespace: minerva
 spec:
   replicas: 3
   resources:
