--- a/deploy/k8s/minerva-frontend.yml
+++ b/deploy/k8s/minerva-frontend.yml
@@ -1,7 +1,20 @@
+---
+# Minerva System -- Front-End: Configmap
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: frontend-configmap
+  namespace: minerva
+data:
+  ROCKET_PORT: "9000"
+  REST_SERVICE_SERVER: rest-svc
+---
+# Minerva System -- Front-End: Deployment
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: frontend-deployment
+  namespace: minerva
 spec:
   template:
     metadata:
@@ -22,3 +35,17 @@ spec:
   selector:
     matchLabels:
       app: frontend
+---
+# Minerva System -- Front-End: Service
+apiVersion: v1
+kind: Service
+metadata:
+  name: frontend-svc
+  namespace: minerva
+spec:
+  type: LoadBalancer
+  selector:
+    app: frontend
+  ports:
+    - port: 80
+      nodePort: 30001
