--- a/deploy/k8s/minerva-dispatch.yml
+++ b/deploy/k8s/minerva-dispatch.yml
@@ -1,7 +1,10 @@
+---
+# Minerva System -- DISPATCH: Deployment
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: dispatch-deployment
+  namespace: minerva
 spec:
   template:
     metadata:
@@ -25,3 +28,24 @@ spec:
   selector:
     matchLabels:
       app: dispatch
+---
+# Minerva System -- DISPATCH: Horizontal Pod Autoscaler
+apiVersion: autoscaling/v2
+kind: HorizontalPodAutoscaler
+metadata:
+  name: dispatch-hpa
+  namespace: minerva
+spec:
+  scaleTargetRef:
+    apiVersion: apps/v1
+    kind: Deployment
+    name: dispatch-deployment
+  minReplicas: 3
+  maxReplicas: 9
+  metrics:
+    - type: Resource
+      resource:
+        name: cpu
+        target:
+          type: Utilization
+          averageUtilization: 65
