--- a/deploy/k8s/ports-configmap.yml
+++ b/deploy/k8s/ports-configmap.yml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: ports-configmap
+  namespace: minerva
 data:
   ROCKET_PORT: "9000"
   USER_SERVICE_PORT: "9010"
