--- a/deploy/k8s/servers-configmap.yml
+++ b/deploy/k8s/servers-configmap.yml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: servers-configmap
+  namespace: minerva
 data:
   USER_SERVICE_SERVER: user-svc
   SESSION_SERVICE_SERVER: session-svc
