--- a/deploy/k8s/util/rediscommander.yml
+++ b/deploy/k8s/util/rediscommander.yml
@@ -1,7 +1,20 @@
+---
+# Redis Commander: Config Map
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: rediscommander-configmap
+  namespace: minerva
+data:
+  REDIS_HOST: redis-svc
+  REDIS_PORT: "6379"
+---
+# Redis Commander: Deployment
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: rediscommander-deployment
+  namespace: minerva
 spec:
   template:
     metadata:
@@ -24,4 +37,18 @@ spec:
   selector:
     matchLabels:
       app: rediscommander
+---
+# Redis Commander: Service
+apiVersion: v1
+kind: Service
+metadata:
+  name: rediscommander-svc
+  namespace: minerva
+spec:
+  type: NodePort
+  selector:
+    app: rediscommander
+  ports:
+    - port: 8081
+      nodePort: 31086
 
