--- a/deploy/k8s/util/grafana.yml
+++ b/deploy/k8s/util/grafana.yml
@@ -1,4 +1,17 @@
 ---
+# Grafana: Config Map
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: grafana-configmap
+  namespace: minerva
+data:
+  grafana.ini: |
+    [server]
+    domain = localhost
+    root_url = %(protocol)s://%(domain)s:%(http_port)s/grafana/
+    serve_from_sub_path = true
+---
 # Grafana: Persistent Volume Claim
 apiVersion: v1
 kind: PersistentVolumeClaim
@@ -66,10 +79,15 @@ spec:
           volumeMounts:
             - mountPath: /var/lib/grafana
               name: grafana-pv
+            - mountPath: /etc/grafana/
+              name: grafana-config
       volumes:
         - name: grafana-pv
           persistentVolumeClaim:
             claimName: grafana-pvc
+        - name: grafana-config
+          configMap:
+            name: grafana-configmap
 ---
 # Grafana: Service
 apiVersion: v1
