K8s: Expose PgAdmin and MongoExpress through ingress

--- a/deploy/k8s/broker-rabbitmqcluster.yml
+++ b/deploy/k8s/broker-rabbitmqcluster.yml
@@ -20,4 +20,4 @@ spec:
                   default_pass = minerva
                   default_user_tags.administrator = true
   service:
-    type: LoadBalancer
+    type: ClusterIP
