--- a/deploy/k8s/util/prometheus.yml
+++ b/deploy/k8s/util/prometheus.yml
@@ -95,10 +95,9 @@ metadata:
   name: prometheus-svc
   namespace: minerva
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   ports:
     - port: 9090
       protocol: TCP
-      nodePort: 31088
   selector:
     app: prometheus
