--- a/deploy/k8s/util/mongoexpress.yml
+++ b/deploy/k8s/util/mongoexpress.yml
@@ -7,6 +7,7 @@ metadata:
   namespace: minerva
 data:
   ME_CONFIG_MONGODB_SERVER: mongodb-svc
+  ME_CONFIG_SITE_BASEURL: /mongoexpress/
 ---
 # MongoExpress: Secret
 apiVersion: v1
