Set build workflow for pushing to master (should be disabled!)

--- a/.github/workflows/release-images.yml
+++ b/.github/workflows/release-images.yml
@@ -1,8 +1,7 @@
 name: Release images
 
-# TODO: Change this to a merge.
 on:
-  pull_request:
+  push:
     branches: [master]
   workflow_dispatch:
 
