--- a/deploy/swarm/docker-stack.yml
+++ b/deploy/swarm/docker-stack.yml
@@ -123,6 +123,8 @@ services:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
     image: postgres:14-alpine
+    ports:
+      - "5432:5432"
     volumes:
       - db-data:/var/lib/postgresql/data
     networks:
@@ -131,53 +133,22 @@ services:
       placement:
         constraints: [node.role == manager]
 
-  # pgAdmin 4
-  pgadmin:
-    image: dpage/pgadmin4:latest
-    environment:
-      - PGADMIN_DEFAULT_EMAIL=admin@admin.com
-      - PGADMIN_DEFAULT_PASSWORD=admin
-    ports:
-      - "8484:80"
-    volumes:
-      - /vagrant/servers.json:/pgadmin4/servers.json
-    networks:
-      - minerva_system
-    deploy:
-      placement:
-        constraints: [node.role == manager]
-
-  # MongoDB 6
+  # MongoDB 4
   mongodb:
     environment:
       - MONGO_INITDB_ROOT_USERNAME=root
       - MONGO_INITDB_ROOT_PASSWORD=mongo
-    image: mongo:6
+    image: mongo:4
     volumes:
       - mongodb-data:/data/db
+    ports:
+      - "27017:27017"
     networks:
       - minerva_system
     deploy:
       placement:
         constraints: [node.role == manager]
 
-  # Mongo Express
-  mongo-express:
-    image: mongo-express:latest
-    environment:
-      - ME_CONFIG_MONGODB_SERVER=mongodb
-      - ME_CONFIG_MONGODB_AUTH_USERNAME=root
-      - ME_CONFIG_MONGODB_AUTH_PASSWORD=mongo
-      - ME_CONFIG_BASICAUTH_USERNAME=mongo
-      - ME_CONFIG_BASICAUTH_PASSWORD=mongo
-    ports:
-      - "8686:8081"
-    networks:
-      - minerva_system
-    deploy:
-      placement:
-        constraints: [node.role == manager]
-        
   # Visualizer
   visualizer:
     image: dockersamples/visualizer:stable
@@ -205,20 +176,6 @@ services:
       placement:
         constraints: [node.role == worker]
 
-  # Redis Commander
-  redis-commander:
-    image: rediscommander/redis-commander:latest
-    environment:
-      - REDIS_HOST=redis
-      - REDIS_PORT=6379
-    ports:
-      - "8787:8081"
-    networks:
-      - minerva_system
-    deploy:
-      placement:
-        constraints: [node.role == manager]
-
   # RabbitMQ
   rabbitmq:
     image: rabbitmq:3-management-alpine
@@ -231,7 +188,7 @@ services:
     networks:
       - minerva_system
     deploy:
-      restart-policy:
+      restart_policy:
         condition: on-failure
       placement:
         constraints: [node.role == worker]
