--- a/deploy/k8s/util/prometheus.yml
+++ b/deploy/k8s/util/prometheus.yml
@@ -77,7 +77,7 @@ data:
     scrape_configs:
       - job_name: 'rabbitmq'
         static_configs:
-          - targets: ['broker-rabbitmqcluster:15692']
+          - targets: ['rabbitmq:15692']
       - job_name: 'kubernetes-apiservers'
         kubernetes_sd_configs:
         - role: endpoints
