Add Prometheus plugin for RabbitMQ

--- a/deploy/k8s/rabbitmq.yml
+++ b/deploy/k8s/rabbitmq.yml
@@ -1,5 +1,15 @@
 ---
-# ConfigMap for configuration in /etc/rabbitmq/
+# ConfigMap for plugins, located at /etc/rabbitmq/enabled_plugins
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: rabbitmq-plugin-configmap
+  namespace: minerva
+data:
+  enabled_plugins: |
+    [rabbitmq_management, rabbitmq_prometheus].
+---
+# ConfigMap for configuration in /etc/rabbitmq/conf.d/
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -46,6 +56,8 @@ spec:
           volumeMounts:
             - mountPath: /var/lib/rabbitmq
               name: rabbitmq-pv
+            - mountPath: /etc/rabbitmq/
+              name: rabbitmq-plugin-config
             - mountPath: /etc/rabbitmq/conf.d
               name: rabbitmq-config
           ports:
@@ -55,6 +67,9 @@ spec:
         - name: rabbitmq-pv
           persistentVolumeClaim:
             claimName: rabbitmq-pvc
+        - name: rabbitmq-plugin-config
+          configMap:
+            name: rabbitmq-plugin-configmap
         - name: rabbitmq-config
           configMap:
             name: rabbitmq-configmap
